# ai_playground

./: Frontend-Wiki.md  GitHub-Wiki-Guide.md  README.md  act_troubleshooting_guide.md  api_endpoints_documentation.md  auth_guide_wiki.md  backend-Wiki.md  backend_folder_structure.md  backend_system_diagram.html  backend_test_wiki.md  business_platform_offerings.html  business_platform_overview.html  business_readme.md  doc.html  frontend_deploy_wiki.md  frontend_folder_structure.md  frontend_system_diagram.html  frontend_test_wiki.md  github_secrets_setup_guide.md  hello_world.py  install_act.sh  mock_data.sql  mysql_readme.md  mysql_readme_zh.md  mysql_setup.bash  package-lock.json  requirements.txt  setup_backend.sh  setup_frontend.sh  setup_github_secrets.sh  shop_manager.html  stripe_payment_guide.md  tigu_database_design_wiki.md  tigusql.sql  user_role_access.md
tigu_backend_fastapi/: .env.example  Dockerfile  ENVIRONMENT_SETUP.md  FIXES_SUMMARY.md  README.md  README_UBUNTU.md  TESTING.md  alembic.ini  create_env_file.py  dev.sh  generate_secret_key.py  pyproject.toml  pytest.ini  requirements.txt  restart_server.py  restart_ubuntu.sh  run_tests.sh  setup_and_run.py  start.bat  start_server.py  start_ubuntu.sh  test.db  test_auth.sh  test_db_connection.py  test_register.py
tigu_backend_fastapi/app/: main.py
tigu_backend_fastapi/app/api/: deps.py
tigu_backend_fastapi/app/core/: logging.py  security.py
tigu_backend_fastapi/app/crud/: order.py  product.py
tigu_backend_fastapi/app/models/: product.py
tigu_backend_fastapi/app/schemas/: user.py
tigu_backend_fastapi/scripts/: cloudbeaver  create_db_user.bash  init_db.sh  start.sh
tigu_backend_fastapi/test_results/: coverage.xml  junit.xml
tigu_backend_fastapi/tests/: conftest.py  test_auth.py  test_companies.py  test_example.py  test_orders.py  test_products.py  test_utils.py
tigu_frontend_vue/: .env.example  .gitignore  (+11 more)
(+64 files in other folders)
